Wrote the css for our character's website (and changed some HTML)

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<title>Sailor Moon</title>
 	<link rel="icon" href="img/sailormoon-avatar.png">
+	<link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
 	<!-- header element -->
@@ -15,7 +17,7 @@
 		<h2>About Sailor Moon</h2>
 		<p>Usagi Tsukino, better known as Sailor Moon, is a fictional superheroine who is the main protagonist and title character of the Sailor Moon manga series written by Naoko Takeuchi.</p>
 		<img src="img/sailor-senshi.jpeg">
-		<p>Sailor Moon and the Sailor Senshi</p>
+		<p class="caption">Sailor Moon and the Sailor Senshi</p>
 		<h2>Sailor Moon's Characteristics</h2>
 		<ol>
 			<li>Sailor Moon is the champion of love and justice</li>
@@ -30,7 +32,6 @@
 			<li><a target="_blank" href="https://en.wikipedia.org/wiki/Sailor_Mars">Sailor Mars</li>
 			<li><a target="_blank" href="https://en.wikipedia.org/wiki/Sailor_Jupiter">Sailor Jupiter</li>
 			<li><a target="_blank" href="https://en.wikipedia.org/wiki/Sailor_Venus">Sailor Venus</li>
-
 		</ul>
 	</main>
 
