--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 		<h2>Sailor Moon's Characteristics</h2>
 		<ol>
 			<li>Sailor Moon is the champion of love and justice</li>
-			<li>She believes in the power of frienship</li>
+			<li>She believes in the power of friendship</li>
 			<li>She loves to eat ice cream and sweets</li>
 		</ol>
 		<!-- Friends -->
 		<h2>Sailor Moon's Friends</h2>
 		<p> Usagi's best friends are the Sailor Senshi. They are Sailor Mercury (Ami Mizuno), Sailor Mars (Rei Hino), Sailor Jupitor (Makoto Kino) and Sailor Venus (Minako Aino). Click on the links below to read more about them</p>
 		<ul>
-			<li><a target="_blank" href="https://en.wikipedia.org/wiki/Sailor_Mercury">Sailor Mercury</li>
-			<li><a target="_blank" href="https://en.wikipedia.org/wiki/Sailor_Mars">Sailor Mars</li>
-			<li><a target="_blank" href="https://en.wikipedia.org/wiki/Sailor_Jupiter">Sailor Jupiter</li>
-			<li><a target="_blank" href="https://en.wikipedia.org/wiki/Sailor_Venus">Sailor Venus</li>
+			<li><a class="blue" target="_blank" href="https://en.wikipedia.org/wiki/Sailor_Mercury">Sailor Mercury</a></li>
+			<li><a class="red" target="_blank" href="https://en.wikipedia.org/wiki/Sailor_Mars">Sailor Mars</a></li>
+			<li><a class="green" target="_blank" href="https://en.wikipedia.org/wiki/Sailor_Jupiter">Sailor Jupiter</a></li>
+			<li><a class="orange" target="_blank" href="https://en.wikipedia.org/wiki/Sailor_Venus">Sailor Venus</a></li>
 		</ul>
 	</main>
 
